--- a/TheForestDSM/AppStrings.resx
+++ b/TheForestDSM/AppStrings.resx
@@ -117,6 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="RefreshIntervalDialog_Content" xml:space="preserve">
+    <value>The refresh interval sets how frequently this application will refresh the user interface. Examples of refreshing the user interface are disabling/enabling buttons and changing the server status.
+
+Increase this value if you're having performance issues and decrease the value to ensure the application always displays the most up-to-date information.</value>
+  </data>
+  <data name="RefreshIntervalDialog_Title" xml:space="preserve">
+    <value>Refresh Interval Information</value>
+  </data>
   <data name="ServiceName" xml:space="preserve">
     <value>TheForestDSMShutdownService</value>
   </data>
