Error checking for scheduling shutdowns and logging

--- a/TheForestDSM/AppStrings.resx
+++ b/TheForestDSM/AppStrings.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ImagesPath" xml:space="preserve">
+    <value>\TheForestDSM;component\Images</value>
+  </data>
   <data name="RefreshIntervalDialog_Content" xml:space="preserve">
     <value>The refresh interval sets how frequently this application will refresh the user interface. Examples of refreshing the user interface are disabling/enabling buttons and changing the server status.
 
