--- a/TheForestDSM/AppStrings.resx
+++ b/TheForestDSM/AppStrings.resx
@@ -126,6 +126,13 @@
   <data name="InvalidShutdownTime_DialogTitle" xml:space="preserve">
     <value>Invalid shutdown time</value>
   </data>
+  <data name="ManuallyStopServiceInstructions" xml:space="preserve">
+    <value>Try manually stopping {0} using Windows Services Manager (services.msc). To manually stop the service using services.msc follow these steps:
+  1. Press Windows Key + R to open Run
+  2. Type services.msc and click Ok
+  3. In the list of services, locate {0}
+  4. Right-click {0} and select Stop</value>
+  </data>
   <data name="RefreshIntervalDialog_DialogContent" xml:space="preserve">
     <value>The refresh interval sets how frequently this application will refresh the user interface. Examples of refreshing the user interface are disabling/enabling buttons and changing the server status.
 
